[tool.poetry]
name = "automatedcodereview"
version = "0.1.0"
description = "automating code revisions"
authors = ["shirinpirouzkhaah <pirouzkhah@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
requests = "^2.28.2"
pandas = "^1.5.3"
ndifflib = "^0.1.0"
Levenshtein = "^0.20.9"
subprocess = "*"
opennmt = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
