[tool.poetry]
name = "ablation study"
version = "0.1.0"
description = "Ablation Study for Code review"
authors = ["shirinpirouzkhaah <pirouzkhah@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
requests = "^2.28.2"
ndifflib = "^0.1.0"
Levenshtein = "^0.20.9"
OpenNMT-py = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
