[tool.poetry]
name = "ablation"
version = "0.1.0"
description = ""
authors = ["shirinpirouzkhaah <pirouzkhah@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.5.3"
requests = "^2.28.2"
ndifflib = "^0.1.0"
Levenshtein = "^0.20.9"
OpenNMT-tf = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
